20120918 smbolton

* Fixed GUI to respect Y_MAX_POLYPHONY.

20120903 smbolton

* Luke Andrew added three new filter modes: 2-pole high-pass, 4-pole
    high-pass, and band-reject (plus he did some nice code
    refactoring.)

20120729 smbolton

* Removed all code enabled by '--enable-developer', except for the
    option to write patch files as 'C' code.  Under-development
    functions are now contained in git branches.

* Promoted Wavecycle Chorus to regular (non-developer-only)
    oscillator mode. 

* Promoted resonz to regular (non-developer-only) filter mode.

* Fixed a click that occurred with several oscillator modes (Wave
    Cycle, PADsynth, and FM) when using portamento in a monophonic
    mode, due to the oscillator phase being reset spuriously.

* Added icon (32x32 only for now, not installing).

* Added some new patches to the default set, including several
    contributed by Ken Restivo.

* Fixed configure.ac for FreeBSD (thanks, downstream.)

* Removed developer-only filters resonr (unneeded) and Neosweep
    (unremarkable; license unclear). Removed ESQ-1 patch import
    code, which never really worked anyway.

20100922 smbolton

* Added minBLEP oscillator waveform: clipped saw (thanks to Gordon
    JC Pearce for the inspiration).

* Added effect: Sean Costello's reverbsc from Csound.

* Added a few new patches to the default set, including a
    contribution from Idiomdrottning.

* Cleaned up effect common memory allocation and dirty buffer
    silencing (somewhat).

* Use new cairo-rendered knobs, when cairo is available (requires
    GTK+ >= 2.8; old knobs will be used if < 2.8 is found).

* Seriously: two consecutive copies of an inlined function that are
    not in cache can take longer to execute than two subroutine
    calls to the function's non-inlined version.  Re-thought
    WhySynth inlining.

* Debastardization of the GUI combo boxes (or, the death of
    popmenu).

* Reworked the minBLEP code for more even processor usage over